(lang dune 3.22)

(name dscroll)

(generate_opam_files true)

(source
 (github jamessouth/dscroll))

(authors "James D. South")

(maintainers "James D. South")

(license GPL3)

(documentation https://github.com/jamessouth/dscroll/blob/master/README.md)

(package
 (name dscroll)
 (synopsis "text scroller")
 (description "a text scroller for polybar, etc., inspired by zscroll")
 (depends ocaml dune core)
 (tags ("scroll text")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
